--- a/apps/templates/_page/_visibility.html
+++ b/apps/templates/_page/_visibility.html
@@ -1,11 +1,6 @@
-    <a uk-icon="icon: download" type="button"></a>
-    <div uk-dropdown="mode: click; pos: bottom-center">
+    <!-- <a uk-icon="icon: download" type="button"></a>
+    <div uk-dropdown="mode: click; pos: bottom-center"> -->
       <ul class="uk-nav uk-dropdown-nav">
-        <li class="uk-inline">
-          <a>
-            <span uk-icon="icon: file-pdf"></span>View Volume PDF
-          </a>
-        </li>
         <li class="uk-padding-bottom-small">
           <a uk-toggle="target: #text-overlay-modal">
             <span uk-icon="icon: copy"></span>View Text Overlay
@@ -22,4 +17,4 @@
           </a>
         </li>
       </ul>
-    </div>
+    <!-- </div> -->
