--- a/apps/templates/_page/_search.html
+++ b/apps/templates/_page/_search.html
@@ -1,38 +1,29 @@
-<div>
-    <nav class="uk-navbar-container uk-margin-bottom" uk-navbar>
-        <div class="uk-navbar-item" style="width: 100%;">
-          {% if page.pid is None %}
-          <form class="uk-search uk-search-default uk-search-navbar rx-page-search-container"
-            id="manifest-search-form" uk-grid>
-            <div class="uk-width-3-4">
-              <input type="hidden" value={{ volume.pid }} name="volume-pid" id="search-volume-pid" />
-              <span uk-search-icon class="rx-search-icon uk-margin-left"></span>
-              <input class="uk-search-input uk-input-remove rx-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="query"
-              value="{{request.GET.q}}" id="search-query-text"/>
-            </div>
-            <fieldset class="uk-margin uk-grid-small uk-width-expand uk-child-width-auto uk-grid rx-page-search-options" style="border:0;">
-              <legend style="display:none;">Search Type:</legend>
-              <label title="Click to include partial matches" class="rx-page-search-option-label">
-                <input class="uk-radio" type="radio" {%if 'exact' not in request.GET.type %}checked{% endif %} aria-label="include partial" value="partial" name="search-type">
-                Partial
-              </label>
-              <label title="Click for exact matches only" class="rx-page-search-option-label">
-                <input class="uk-radio" type="radio" {%if 'exact' in request.GET.type %}checked{% endif %} aria-label="exact only" value="exact" name="search-type" id="search-exact">
-                Exact
-              </label>
-            </fieldset>
-          </form>
-          {% else %}
-          <form class="uk-search uk-search-default"
-            action="{% url 'volumeall' volume.pid %}" method="get" accept-charset="utf-8">
-            {% csrf_token %}
-            <span uk-search-icon></span>
-            <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
-              value="{{request.GET.q}}">
-          </form>
+<h1 class="uk-text-large uk-text-bold uk-margin-small-bottom">Search within this Volume</h1>
+{% if page.pid is None %}
+<form class="uk-search uk-search-default rx-page-search-container" id="manifest-search-form">
+  <input type="hidden" value={{ volume.pid }} name="volume-pid" id="search-volume-pid" />
+  <!-- <span uk-search-icon></span> -->
+  <input class="uk-search-input" type="text" placeholder="Hit Enter to search" aria-label="Search" name="query"
+  value="{{request.GET.q}}" id="search-query-text"/>
+  <fieldset style="display: flex">
+    <label title="Click to include partial matches" class="rx-page-search-option-label uk-margin-right">
+      <input class="uk-radio" type="radio" {%if 'exact' not in request.GET.type %}checked{% endif %} aria-label="include partial" value="partial" name="search-type">
+      Partial
+    </label>
+    <label title="Click for exact matches only" class="rx-page-search-option-label">
+      <input class="uk-radio" type="radio" {%if 'exact' in request.GET.type %}checked{% endif %} aria-label="exact only" value="exact" name="search-type" id="search-exact">
+      Exact
+    </label>
+  </fieldset>
+</form>
+{% else %}
+<form class="uk-search uk-search-default rx-page-search-container"
+  action="{% url 'volumeall' volume.pid %}" method="get" accept-charset="utf-8">
+  {% csrf_token %}
+  <span uk-search-icon></span>
+  <input class="uk-search-input" type="text" placeholder="Hit Enter to search" aria-label="Search" name="q"
+    value="{{request.GET.q}}">
+</form>
+{% endif %}
 
-          {% endif %}
-        </div>
-    </nav>
-    <v-volume-annotations :manifest-count="{{ user_annotation_count }}" :page-count="{{ user_annotation_page_count }}" annotation-index="{{user_annotation_index}}"></v-volume-annotations>
-</div>
+<v-volume-annotations class="uk-margin-small-top" :manifest-count="{{ user_annotation_count }}" :page-count="{{ user_annotation_page_count }}" annotation-index="{{user_annotation_index}}"></v-volume-annotations>
