--- a/apps/templates/_page/_visibility.html
+++ b/apps/templates/_page/_visibility.html
@@ -1,20 +1,20 @@
-    <!-- <a uk-icon="icon: download" type="button"></a>
-    <div uk-dropdown="mode: click; pos: bottom-center"> -->
-      <ul class="uk-nav uk-dropdown-nav">
-        <li class="uk-padding-bottom-small">
-          <a uk-toggle="target: #text-overlay-modal">
-            <span uk-icon="icon: copy"></span>View Text Overlay
-          </a>
-        </li>
-        <li class="uk-padding-bottom-small">
-          <a onclick="showOCR()">
-            <span uk-icon="icon: eye"></span>View OCR Overlay
-          </a>
-        </li>
-        <li class="uk-padding-bottom-small">
-          <a onclick="hideOCR()">
-            <span uk-icon="icon: eye-slash"></span>Hide OCR Overlay
-          </a>
-        </li>
-      </ul>
-    <!-- </div> -->
+<ul class="uk-list">
+  <li>
+    <a uk-toggle="target: #text-overlay-modal" class="rx-action-btn">
+      <!-- <span uk-icon="icon: copy"></span> -->
+      View Text Overlay
+    </a>
+  </li>
+  <li>
+    <a class="rx-action-btn" onclick="showOCR()">
+      <!-- <span uk-icon="icon: eye"></span> -->
+      View OCR Overlay
+    </a>
+  </li>
+  <li>
+    <a class="rx-action-btn" onclick="hideOCR()">
+      <!-- <span uk-icon="icon: eye-slash"></span> -->
+      Hide OCR Overlay
+    </a>
+  </li>
+</ul>
