--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -8,6 +8,10 @@
   #rx-nav {
     display: none;
   }
+  .uk-container {
+    padding: 0;
+    max-width: none;
+  }
 </style>
 {% endblock extra_css %}
 
@@ -19,19 +23,19 @@
 <nav uk-navbar>
   <div class="uk-navbar-left">
     <a href="/" alt="Readux Logo/Home"><img src="{% static 'images/readux-graphics.svg'%}" style="height: 40px;"></img></a>
-    <ul class="rx-page-breadcrumb long-and-truncated uk-margin-left">
-      <li class="rx-page-breadcrumb-item"><a href="/{{ collectionlink.slug }}" alt="Collections">Collections</a></li>
+    <ul class="rx-page-breadcrumb long-and-truncated">
       {% if volume.collections.first.pid %}
+      <li class="rx-page-breadcrumb-item"><a href="/{{ collectionlink.slug }}" alt="Collections">Collections</a></li>
       <li class="rx-page-breadcrumb-item"><a href="{% url 'collection' volume.collections.first.pid %}"
           alt="Collections">{{ volume.collections.first.label }}</a>
       </li>
       {% else %}
       <li class="rx-page-breadcrumb-item"><a class="nav-link" href="/{{ volumelink.slug }}">All Volumes</a></li>
       {% endif %}
-      <li> {{volume.label}}</li>
+      <li class="uk-text-truncate"> {{volume.label}}</li>
     </ul>
   </div>
-  <div class="uk-navbar-right">
+  <div class="uk-navbar-right uk-width-auto">
     <div class="rx-page-breadcrumb">
       <a href="/search/" aria-label="fudiv site search" title="Full Site Search"
         uk-tooltip="title: Full Site Search; pos: right">
@@ -77,7 +81,7 @@
 <div id="modal-info" class="reader-modal" uk-modal>
   <div class="uk-modal-dialog uk-padding-small">
     <button class="uk-modal-close-full uk-padding-small uk-margin-small-top uk-close-small" type="button" uk-close></button>
-    <ul uk-tab>
+    <ul uk-tab class="uk-text-bold uk-text-large">
         <li class="uk-active"><a href="#">Metadata</a></li>
         <li><a href="#">Attribution</a></li>
     </ul>
@@ -93,7 +97,7 @@
 <div id="modal-urls" class="reader-modal" uk-modal>
   <div class="uk-modal-dialog uk-padding-small">
     <button class="uk-modal-close-full uk-padding-small uk-margin-small-top uk-close-small" type="button" uk-close></button>
-    <ul uk-tab>
+    <ul uk-tab class="uk-text-bold uk-text-large">
       <li class="uk-active"><a href="#">URLs</a></li>
       <li><a href="#">Share and Export</a></li>
     </ul>
