--- a/apps/templates/_page/_exports.html
+++ b/apps/templates/_page/_exports.html
@@ -7,6 +7,10 @@
     target="_blank">Export Citation in RIS</a>
   </li>
   <li>
+    <v-info-content-url-page-text label="Page Text">
+    </v-info-content-url-page-text>
+  </li>
+  <li>
     <v-volume-export-annotation-btn :manifest-count="{{ user_annotation_count }}">
       <form action="{% url 'export' volume.pid %}" class="button_to" method="GET" id="rx-annotation-export-form">
         <a class="rx-action-btn" href="#" onclick="rxFormSubmit('rx-annotation-export-form');">Export
