--- a/apps/templates/_page/_search.html
+++ b/apps/templates/_page/_search.html
@@ -26,4 +26,26 @@
 </form>
 {% endif %}
 
+{% if user_annotation_count > 0 %}
+<ul class="uk-subnav uk-subnav-pill" uk-switcher>
+    <li><a href="#" id="rx-annotation-manifest">{{ user_annotation_count }} annotations in manifest</a></li>
+    <li><a href="#" id="rx-annotation-page"> annotations on page</a></li>
+</ul>
+{% endif %}
+
 <v-volume-annotations class="uk-margin-small-top" :manifest-count="{{ user_annotation_count }}" :page-count="{{ user_annotation_page_count }}" annotation-index="{{user_annotation_index}}"></v-volume-annotations>
+
+<ul uk-accordion="multiple: true" class="uk-width-1-1 ">
+  <li class="uk-open">
+      <a class="rx-accordion-handle rx-info-content-label uk-accordion-title" href="#"><span id="annotation-count"></span> Match(es) in Text</a>
+      <div class="uk-accordion-content uk-margin-small-top" id="ocr-annotation-results">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+  </li>
+  <li class="uk-open">
+      <a class="rx-accordion-handle rx-info-content-label uk-accordion-title" href="#"><span id="user-annotation-count"></span> Match(es) in Annotations</a>
+      <div class="uk-accordion-content uk-margin-small-top" id="user-annotation-results">
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.
+      </div>
+  </li>
+</ul>
