--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -48,16 +48,21 @@
         accept-charset="utf-8"
     >
         <div class="uk-form uk-width-1-1">
-            <fieldset class="uk-margin uk-width-1-1">
-                <div class="uk-inline uk-width-1-1">
-                    <span class="uk-form-icon" uk-icon="icon: search" aria-label="search"></span>
-                    {{ form.q }}
+            <fieldset class="uk-margin uk-width-1-1 scope-and-keyword">
+                <div class="scope">
+                    {{ form.scope }}
                 </div>
-                <span class="uk-text-small">
-                    Search for individual whole keywords. Multiple words will be searched as
-                    'or' (e.g. Rome London = Rome or London).
-                </span>
+                <div class="keyword">
+                    <div class="uk-inline uk-width-1-1">
+                        <span class="uk-form-icon" uk-icon="icon: search" aria-label="search"></span>
+                        {{ form.q }}
+                    </div>
+                </div>
             </fieldset>
+            <span class="uk-text-small">
+                Search for individual whole keywords. Multiple words will be searched as
+                'or' (e.g. Rome London = Rome or London).
+            </span>
             <fieldset class="uk-margin uk-width-1-1">
                 <div class="uk-form-label">{{ form.sort.label }}</div>
                 {{ form.sort }}
