--- a/apps/templates/snippets/volume_result.html
+++ b/apps/templates/snippets/volume_result.html
@@ -78,12 +78,11 @@
             {% for canvas in volume.meta.inner_hits.canvases %}
                 <dd class="result-page">
                     <a href="{% url 'page' volume=volume.pid page=canvas.pid %}">
-                        <span class="page-number">{{ canvas.position|add:1 }}</span>
-                        {% if canvas.thumbnail %}<img src="{{ canvas.thumbnail }}" loading="lazy" />{% endif %}
+                        <span class="page-number">p. {{ canvas.position|add:1 }}</span>
                         {% if canvas.meta.highlight %}
                             <ul class="highlights">
                             {% for fragment in canvas.meta.highlight|dict_item:"canvas_set.result" %}
-                                <li class="result-volume-summary">{{ fragment|safe }}</li>
+                                <li>{{ fragment|safe }}</li>
                             {% endfor %}
                             </ul>
                         {% endif %}
