Allow exact matches in double quotes (#951)

--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -61,7 +61,8 @@
             </fieldset>
             <span class="uk-text-small">
                 Search for individual whole keywords. Multiple words will be searched as
-                'or' (e.g. Rome London = Rome or London).
+                'or' (e.g. Rome London = Rome or London). Surround a word or phrase in
+                double quotes (e.g. "Roman painter") to require exact matches in results.
             </span>
             <fieldset class="uk-margin uk-width-1-1">
                 <div class="uk-form-label">{{ form.sort.label }}</div>
