Update css per merge

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -46,20 +46,6 @@ em {
   border: 1px solid transparent;
 }
 
-#search-form .scope-and-keyword {
-  display: flex;
-  flex-flow: row nowrap;
-  margin: 1rem 0 0;
-  gap: 0.5rem;
-}
-
-#search-form .scope-and-keyword .scope {
- flex: 0 1 auto;
-}
-#search-form .scope-and-keyword .keyword {
-  flex: 1 0 auto;
-}
-
 .uk-tab > .uk-active > a {
   border-color: var(--link-color) !important;
   color: var(--link-color) !important; }
@@ -1879,27 +1865,22 @@ div#search-grid input[type="checkbox"]#toggle-date + label span {
 }
 
 /* Individual search results */
-ol#search-results {
-  list-style: none; }
-
-ol#search-results dl {
-  margin-left: 2rem; }
-
 /* Clamp summary to 3 lines */
-ol#search-results .result-volume-summary {
+#search-results .result-volume-summary {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden; }
 
 /* search result highlighting */
-ol#search-results em {
+#search-results em {
   color: #510029 !important;
   font-weight: bold;
-  font-style: normal; }
+  font-style: normal;
+}
 
 /* results within full text */
-ol#search-results .result-page a {
+#search-results .result-page a {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
@@ -1909,12 +1890,12 @@ ol#search-results .result-page a {
   margin: 0.5rem 0;
 }
 
-ol#search-results .result-page .page-number {
+#search-results .result-page .page-number {
   min-width: 4rem;
   max-width: 4rem;
 }
 
-ol#search-results .result-page ul li {
+#search-results .result-page ul li {
   list-style: disc;
 }
 
