--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -27,7 +27,7 @@
 <div id="modal-search" class="reader-modal" uk-modal>
   <div class="uk-modal-dialog uk-padding-small">
     <button class="uk-modal-close-full uk-padding-small uk-margin-small-top uk-close-small" type="button" uk-close></button>
-    {% include '_page/_search.html' %}
+    <v-volume-search pid="{{ volume.pid }}"></v-volume-search>
   </div>
 </div>
 <!-- uiAction search -->
